--- a/travel.html
+++ b/travel.html
@@ -6,7 +6,6 @@
 <title>Travel – Jan Arroyo</title>
 <link href="styles.css" rel="stylesheet" />
 
-
 <style>
   :root{
     --bg-cream:#fff7ed;
@@ -25,156 +24,138 @@
     background: var(--bg);
     min-height:100dvh; overflow-x:hidden;
   }
-  .container{max-width:1120px;margin:0 auto;padding:20px 20px 100px}
+  /* ↓ smaller top padding to trim space above the boarding pass */
+  .container{max-width:1120px;margin:0 auto;padding:8px 20px 100px}
 
-/* ---------- Top nav (match other pages) ---------- */
-.topbar{position:sticky;top:0;z-index:20;backdrop-filter:saturate(1.2) blur(8px);
-  background:linear-gradient(180deg,rgba(255,255,255,.78),rgba(255,255,255,.58));
-  border-bottom:1px solid rgba(17,24,39,.06)
-}
-.topbar-inner{max-width:1120px;margin:0 auto;padding:10px 20px;display:flex;gap:16px;align-items:center}
-.brand{font-weight:800;letter-spacing:.08em}
-.brand a{text-decoration:none;color:var(--ink)}
-.pill{padding:8px 14px;border-radius:999px;background:#f3f4f6;text-decoration:none;color:#0f172a;font-weight:600;
-  box-shadow:inset 0 0 0 1px rgba(17,24,39,.08)}
-.pill.active{background:#111827;color:#fff}
+  /* Travel navbar match */
+  .nav .container { padding: 14px 20px; }
+  .nav .brand-logo img { height: 28px; }
 
-/* Travel navbar match (same element has both classes) */
-.nav .container { padding: 14px 20px; }
-.nav .brand-logo img { height: 28px; }
+  /* Decorative route + plane (background) */
+  .scene{position:fixed;inset:0;z-index:0;pointer-events:none;opacity:.9}
+  .route-dash{stroke:rgba(17,24,39,.22);stroke-width:1.6;stroke-dasharray:7 9;fill:none}
 
-/* ---------- Decorative route + plane (background) ---------- */
-.scene{position:fixed;inset:0;z-index:0;pointer-events:none;opacity:.9}
-.route-dash{stroke:rgba(17,24,39,.22);stroke-width:1.6;stroke-dasharray:7 9;fill:none}
+  /* BOARDING PASS header */
+  /* ↓ smaller top/bottom margins to trim the gap above and before Next up */
+  .ticket{
+    margin:8px 0 2px;
+    border-radius:26px;
+    overflow:hidden;
+    box-shadow:var(--shadow);
+    background:var(--paper);
+    border:1px solid var(--line);
+  }
+  .ticket .bar{
+    background:var(--header);
+    padding:10px 18px;
+    font-weight:900;
+    letter-spacing:.14em;
+    text-transform:uppercase;
+  }
+  .ticket .row{
+    display:grid;grid-template-columns:1fr 1px 340px;align-items:stretch;
+    gap:0; position:relative;
+  }
+  .perforation{
+    width:1px;background:
+      repeating-linear-gradient(#0000 0 8px, rgba(17,24,39,.22) 8px 12px);
+  }
+  .col-left{padding:18px;display:grid;grid-template-columns:1fr 1fr;gap:16px;position:relative}
+  .field{font-size:12px;color:var(--muted);letter-spacing:.08em}
+  .big-iata{font-size:32px;font-weight:900;line-height:1}
+  .city{font-size:12px;margin-top:2px}
+  .map{
+    grid-column:1/-1;margin-top:10px;border:1px dashed rgba(17,24,39,.18);
+    border-radius:14px;height:110px;display:grid;place-items:center;background:#fff;position:relative;
+  }
+  .map svg{width:92%;height:auto}
+  .ticket-route{fill:none;stroke:#111827;stroke-width:1.5;stroke-linecap:round;stroke-dasharray:6 8;opacity:.45}
 
-/* ---------- BOARDING PASS header ---------- */
-.ticket{
-  margin:18px 0 6px;
-  border-radius:26px;
-  overflow:hidden;
-  box-shadow:var(--shadow);
-  background:var(--paper);
-  border:1px solid var(--line);
-}
-.ticket .bar{
-  background:var(--header);
-  padding:10px 18px;
-  font-weight:900;
-  letter-spacing:.14em;
-  text-transform:uppercase;
-}
-.ticket .row{
-  display:grid;grid-template-columns:1fr 1px 340px;align-items:stretch;
-  gap:0; position:relative;
-}
-.perforation{
-  width:1px;background:
-    repeating-linear-gradient(#0000 0 8px, rgba(17,24,39,.22) 8px 12px);
-}
-.col-left{padding:18px;display:grid;grid-template-columns:1fr 1fr;gap:16px;position:relative}
-.field{font-size:12px;color:var(--muted);letter-spacing:.08em}
-.big-iata{font-size:32px;font-weight:900;line-height:1}
-.city{font-size:12px;margin-top:2px}
-.map{
-  grid-column:1/-1;margin-top:10px;border:1px dashed rgba(17,24,39,.18);
-  border-radius:14px;height:110px;display:grid;place-items:center;background:#fff;position:relative;
-}
-.map svg{width:92%;height:auto}
-.ticket-route{fill:none;stroke:#111827;stroke-width:1.5;stroke-linecap:round;stroke-dasharray:6 8;opacity:.45}
+  .col-right{padding:18px;background:#fff;display:grid;grid-template-columns:1fr 1fr;gap:12px}
+  .label{font-size:12px;color:var(--muted);letter-spacing:.08em}
+  .value{font-weight:800}
+  .barcode{grid-column:1/-1;height:40px;border-radius:8px;border:1px solid rgba(17,24,39,.12);
+    background:repeating-linear-gradient(90deg,#111827 0 2px, transparent 2px 4px),#fff}
 
-.col-right{padding:18px;background:#fff;display:grid;grid-template-columns:1fr 1fr;gap:12px}
-.label{font-size:12px;color:var(--muted);letter-spacing:.08em}
-.value{font-weight:800}
-.barcode{grid-column:1/-1;height:40px;border-radius:8px;border:1px solid rgba(17,24,39,.12);
-  background:repeating-linear-gradient(90deg,#111827 0 2px, transparent 2px 4px),#fff}
+  /* NEXT UP — tightened */
+  .next{
+    margin:2px 0 6px;                  /* smaller gap above and below the card */
+    border-radius:18px;border:1px solid var(--line);background:#fff;box-shadow:var(--shadow);
+    overflow:hidden;
+  }
+  .next h3{
+    margin:0; padding:2px 12px;        /* short header */
+    font-size:18px; line-height:1; border:0;
+  }
+  .next-list{
+    display:grid;grid-template-columns:repeat(2,minmax(0,1fr));gap:0;
+    margin:0; border-top:1px solid var(--line); /* divider sits right under the title */
+  }
+  @media (max-width:780px){.next-list{grid-template-columns:1fr}}
+  .next-item{
+    display:grid;grid-template-columns:auto 1fr auto;align-items:center;gap:12px;
+    padding:6px 12px 4px;              /* tighter rows; trims below Mexico */
+    border-top:0;
+  }
+  .next-item:last-child{ padding-bottom:4px; } /* trims bottom of the card */
+  .flag{width:46px;height:28px;border-radius:6px;border:1px solid rgba(17,24,39,.18);overflow:hidden;background:#fff;box-shadow:0 6px 16px rgba(17,24,39,.08)}
+  .flag img{width:100%;height:100%;object-fit:cover;display:block}
+  .next-title{font-weight:800;margin:0}
+  .next-sub{margin:2px 0 0;color:var(--muted);font-size:13px}
+  .badge{justify-self:end;background:#ecfdf5;border:1px solid #a7f3d0;color:#065f46;border-radius:999px;font-weight:800;
+    padding:6px 10px;font-size:12px}
+  .badge.gray{background:#f3f4f6;border-color:#e5e7eb;color:#374151}
 
-/* ---------- NEXT UP ---------- */
-.next{
-  margin:4px 0 8px;
-  border-radius:18px;border:1px solid var(--line);background:var(--paper);box-shadow:var(--shadow);
-  overflow:hidden;
-}
-.next h3{margin:0;padding:6px 14px;background:#fff;border-bottom:1px solid var(--line)}
-.next-list{display:grid;grid-template-columns:repeat(2,minmax(0,1fr));gap:0}
-@media (max-width:780px){.next-list{grid-template-columns:1fr}}
-.next-item{display:grid;grid-template-columns:auto 1fr auto;align-items:center;gap:12px;padding:6px 14px;border-top:1px solid var(--line)}
-.flag{width:46px;height:28px;border-radius:6px;border:1px solid rgba(17,24,39,.18);overflow:hidden;background:#fff;box-shadow:0 6px 16px rgba(17,24,39,.08)}
-.flag img{width:100%;height:100%;object-fit:cover;display:block}
-.next-title{font-weight:800;margin:0}
-.next-sub{margin:2px 0 0;color:var(--muted);font-size:13px}
-.badge{justify-self:end;background:#ecfdf5;border:1px solid #a7f3d0;color:#065f46;border-radius:999px;font-weight:800;
-  padding:6px 10px;font-size:12px}
-.badge.gray{background:#f3f4f6;border-color:#e5e7eb;color:#374151}
+  /* Section title */
+  .section-title{margin:16px 0 10px;font-size:20px;font-weight:800;display:flex;align-items:center;gap:10px}
+  .section-title::after{content:"";height:1px;background:var(--line);flex:1}
 
-/* ---------- Section title ---------- */
-.section-title{margin:16px 0 10px;font-size:20px;font-weight:800;display:flex;align-items:center;gap:10px}
-.section-title::after{content:"";height:1px;background:var(--line);flex:1}
+  /* Trip grid */
+  .grid{display:grid;grid-template-columns:repeat(2,minmax(0,1fr));gap:18px;position:relative;z-index:1}
+  @media (max-width:820px){.grid{grid-template-columns:1fr}}
+  .trip{background:#fff;border-radius:18px;border:1px solid var(--line);overflow:hidden;
+    box-shadow:var(--shadow);position:relative;transition:transform .18s var(--bezier),box-shadow .18s var(--bezier);
+    opacity:0;transform:translateY(12px) scale(.995)}
+  .trip.in-view{opacity:1;transform:translateY(0) scale(1)}
+  .trip:hover{transform:translateY(-2px);box-shadow:0 16px 40px rgba(17,24,39,.16)}
+  .trip .date{position:absolute;top:10px;left:10px;background:rgba(17,24,39,.86);color:#fff;border-radius:999px;
+    padding:6px 10px;font-size:12px}
+  .trip img{width:100%;height:320px;object-fit:cover;display:block}
+  .trip .meta{padding:12px 14px 14px}
+  .trip h3{margin:0 0 4px 0;font-size:18px}
+  .trip p{margin:0;color:var(--muted);font-size:14px}
 
-/* ---------- Trip grid ---------- */
-.grid{display:grid;grid-template-columns:repeat(2,minmax(0,1fr));gap:18px;position:relative;z-index:1}
-@media (max-width:820px){.grid{grid-template-columns:1fr}}
-.trip{background:#fff;border-radius:18px;border:1px solid var(--line);overflow:hidden;
-  box-shadow:var(--shadow);position:relative;transition:transform .18s var(--bezier),box-shadow .18s var(--bezier);
-  opacity:0;transform:translateY(12px) scale(.995)}
-.trip.in-view{opacity:1;transform:translateY(0) scale(1)}
-.trip:hover{transform:translateY(-2px);box-shadow:0 16px 40px rgba(17,24,39,.16)}
-.trip .date{position:absolute;top:10px;left:10px;background:rgba(17,24,39,.86);color:#fff;border-radius:999px;
-  padding:6px 10px;font-size:12px}
-.trip img{width:100%;height:320px;object-fit:cover;display:block}
-.trip .meta{padding:12px 14px 14px}
-.trip h3{margin:0 0 4px 0;font-size:18px}
-.trip p{margin:0;color:var(--muted);font-size:14px}
+  /* Lightbox */
+  .lightbox{position:fixed;inset:0;display:none;place-items:center;z-index:30;background:rgba(17,24,39,.35);
+    backdrop-filter:blur(4px) saturate(1.05)}
+  .lightbox.open{display:grid;animation:fadeIn .25s ease forwards}
+  @keyframes fadeIn{from{opacity:0}to{opacity:1}}
+  .lb-card{width:min(1020px,92vw);max-height:86vh;display:grid;grid-template-columns:1.15fr .85fr;gap:14px;
+    background:linear-gradient(180deg,#fff8ef,#fff4e6);border:1px solid var(--line);border-radius:18px;
+    box-shadow:0 30px 80px rgba(17,24,39,.28);overflow:hidden;position:relative;
+    transform:translateY(8px) scale(.98);opacity:0;animation:cardIn .32s var(--bezier) forwards .1s}
+  @keyframes cardIn{to{transform:translateY(0) scale(1);opacity:1}}
+  @media (max-width:920px){.lb-card{grid-template-columns:1fr;max-height:88vh}}
+  .lb-left{padding:14px;display:grid;grid-template-rows:auto auto}
+  .lb-stage{background:#fff;border-radius:12px;border:1px solid var(--line);display:grid;place-items:center;
+    position:relative;overflow:hidden;height:min(58vh,520px)}
+  .lb-stage img{max-width:100%;max-height:100%;object-fit:contain;opacity:0;transition:opacity .2s ease}
+  .lb-stage img.show{opacity:1}
+  .navbtn{position:absolute;top:50%;transform:translateY(-50%);background:rgba(17,24,39,.75);color:#fff;border:none;
+    border-radius:999px;width:34px;height:34px;display:grid;place-items:center;cursor:pointer}
+  .navbtn.left{left:10px}.navbtn.right{right:10px}
+  .thumbs{display:flex;gap:8px;overflow:auto;margin-top:10px;padding-bottom:6px}
+  .thumbs img{width:62px;height:62px;border-radius:10px;object-fit:cover;border:2px solid transparent;cursor:pointer}
+  .thumbs img.active{border-color:#f59e0b}
+  .lb-right{padding:16px 18px 18px 6px}
+  .lb-title{font-weight:800;font-size:20px;margin:2px 0 2px}
+  .lb-sub{color:var(--muted);font-size:13px;margin-bottom:10px}
+  .lb-notes{line-height:1.6;font-size:15px;overflow:auto;max-height:calc(86vh - 190px)}
+  .lb-close{position:absolute;top:10px;right:10px;border:none;background:#111827;color:#fff;border-radius:999px;
+    width:36px;height:36px;font-size:18px;cursor:pointer;box-shadow:0 8px 18px rgba(17,24,39,.2)}
 
-/* ---------- Cream Lightbox ---------- */
-.lightbox{position:fixed;inset:0;display:none;place-items:center;z-index:30;background:rgba(17,24,39,.35);
-  backdrop-filter:blur(4px) saturate(1.05)}
-.lightbox.open{display:grid;animation:fadeIn .25s ease forwards}
-@keyframes fadeIn{from{opacity:0}to{opacity:1}}
-.lb-card{width:min(1020px,92vw);max-height:86vh;display:grid;grid-template-columns:1.15fr .85fr;gap:14px;
-  background:linear-gradient(180deg,#fff8ef,#fff4e6);border:1px solid var(--line);border-radius:18px;
-  box-shadow:0 30px 80px rgba(17,24,39,.28);overflow:hidden;position:relative;
-  transform:translateY(8px) scale(.98);opacity:0;animation:cardIn .32s var(--bezier) forwards .1s}
-@keyframes cardIn{to{transform:translateY(0) scale(1);opacity:1}}
-@media (max-width:920px){.lb-card{grid-template-columns:1fr;max-height:88vh}}
-.lb-left{padding:14px;display:grid;grid-template-rows:auto auto}
-.lb-stage{background:#fff;border-radius:12px;border:1px solid var(--line);display:grid;place-items:center;
-  position:relative;overflow:hidden;height:min(58vh,520px)}
-.lb-stage img{max-width:100%;max-height:100%;object-fit:contain;opacity:0;transition:opacity .2s ease}
-.lb-stage img.show{opacity:1}
-.navbtn{position:absolute;top:50%;transform:translateY(-50%);background:rgba(17,24,39,.75);color:#fff;border:none;
-  border-radius:999px;width:34px;height:34px;display:grid;place-items:center;cursor:pointer}
-.navbtn.left{left:10px}.navbtn.right{right:10px}
-.thumbs{display:flex;gap:8px;overflow:auto;margin-top:10px;padding-bottom:6px}
-.thumbs img{width:62px;height:62px;border-radius:10px;object-fit:cover;border:2px solid transparent;cursor:pointer}
-.thumbs img.active{border-color:#f59e0b}
-.lb-right{padding:16px 18px 18px 6px}
-.lb-title{font-weight:800;font-size:20px;margin:2px 0 2px}
-.lb-sub{color:var(--muted);font-size:13px;margin-bottom:10px}
-.lb-notes{line-height:1.6;font-size:15px;overflow:auto;max-height:calc(86vh - 190px)}
-.lb-close{position:absolute;top:10px;right:10px;border:none;background:#111827;color:#fff;border-radius:999px;
-  width:36px;height:36px;font-size:18px;cursor:pointer;box-shadow:0 8px 18px rgba(17,24,39,.2)}
-
-.zoom-clone{position:fixed;z-index:40;border-radius:14px;object-fit:cover;box-shadow:0 16px 40px rgba(17,24,39,.25);
-  transition:all .45s var(--bezier)}
-
-/* FINAL trim for the Next up card (removes the big white band) */
-.next{ background:#fff; }
-.next h3{
-  margin:0;
-  padding:2px 12px;
-  font-size:18px;
-  line-height:1;
-  border:0;
-}
-.next-list{
-  margin:0;
-  border-top:1px solid var(--line);
-}
-.next-item{
-  padding:8px 12px;
-  border-top:0;
-}
-.next-item:last-child{ padding-bottom:6px; }
+  .zoom-clone{position:fixed;z-index:40;border-radius:14px;object-fit:cover;box-shadow:0 16px 40px rgba(17,24,39,.25);
+    transition:all .45s var(--bezier)}
 </style>
 </head>
 <body class="plain-bg">
@@ -200,7 +181,6 @@
       <animate attributeName="stroke-dashoffset" from="0" to="-220" dur="12s" repeatCount="indefinite"/>
     </path>
     <g>
-      <!-- tiny plane icon that rotates along the path -->
       <path d="M-8,-3 L8,0 L-8,3 L-2,0 Z" fill="#111827"/>
       <animateMotion dur="16s" repeatCount="indefinite" rotate="auto">
         <mpath href="#routeBG"/>
@@ -227,12 +207,9 @@
           </div>
 
           <div class="map" aria-hidden="true">
-            <!-- minimal world silhouette + route with rotating plane -->
             <svg viewBox="0 0 800 400" fill="currentColor">
               <path d="M88 183c13-23 44-45 63-43 10 1 15 13 28 16 15 4 39-12 50-6 16 9-3 39 7 47 11 8 41-17 53-8 16 12-1 56 15 64 23 11 49-54 72-49 12 2 19 28 32 29 12 1 27-22 39-19 14 3 14 33 28 36 15 2 33-31 47-29 19 3 27 55 47 55 21 0 44-60 62-62 19-2 28 55 47 57 13 2 28-20 40-16 9 3 21 26 21 26l-5 55H58l-9-79s13-31 39-44z" opacity=".28"/>
-              <!-- dashed route across the card -->
               <path id="ticketRoute" class="ticket-route" d="M140,210 C260,180 380,160 520,180  " />
-              <!-- small plane that follows the dashed route -->
               <g>
                 <path d="M-7,-3 L7,0 L-7,3 L-2,0 Z" fill="#111827"/>
                 <animateMotion dur="10s" repeatCount="indefinite" rotate="auto">
@@ -273,7 +250,6 @@
       <div class="next-list">
         <div class="next-item">
           <div class="flag" aria-hidden="true">
-            <!-- Accurate Mexico flag -->
             <img src="https://flagcdn.com/w40/mx.png" alt="">
           </div>
           <div>
@@ -285,7 +261,6 @@
 
         <div class="next-item">
           <div class="flag" aria-hidden="true">
-            <!-- Accurate South Korea flag -->
             <img src="https://flagcdn.com/w40/kr.png" alt="">
           </div>
           <div>
@@ -391,7 +366,7 @@
     })();
   }
 
-  /* --- Lightbox state with smooth zoom --- */
+  /* Lightbox state with smooth zoom */
   const cards=document.querySelectorAll('.trip');
   const lb=document.getElementById('lightbox');
   const lbImg=document.getElementById('lbImg');
