--- a/travel.html
+++ b/travel.html
@@ -276,15 +276,16 @@
 
     <section class="grid" id="tripGrid">
       <article
-        class="trip reveal"
-        data-title="Spain — March 2023"
-        data-date="Mar 2023"
-        data-notes="First time in Spain. Long walks, late dinners, and getting happily lost among old streets."
-        data-images="images/Spain1.JPG|images/spain1.JPG,images/Spain2.JPG|images/spain2.JPG,images/Spain3.JPG|images/spain3.JPG">
-        <span class="date">Mar 2023</span>
-        <img alt="Spain" src="images/Spain1.JPG" onerror="this.onerror=null;this.src='images/spain1.JPG'">
-        <div class="meta"><h3>Spain</h3><p>sunsets • stone streets • way too many photos</p></div>
-      </article>
+      class="trip reveal"
+      data-title="Spain — March 2023"
+      data-date="Mar 2023"
+      data-notes="I went to Spain with the Marshall School of Business to study international commerce and it completely changed how I see business and culture. I learned about the Spanish economy and how customers there value long meals, trust, and tradition instead of the speed and convenience that drive so much of American behavior. It showed me that really knowing your customer means paying attention to culture as much as data, and I left with stronger skills in adaptability, observation, and cross-cultural communication. Outside the classroom is where a lot of the learning happened too. Spending late nights with friends at tapas bars, talking with locals, and exploring cities like Madrid and Barcelona gave me a perspective you cannot get from a textbook. Getting lost together, practicing Spanish, and figuring out the metro taught me problem solving and patience in real time. I built friendships that still last today, and one of the wildest moments was running into Zidane on the streets of Madrid, something that made the trip unforgettable."
+      data-images="images/Spain1.JPG|images/spain1.JPG,images/Spain2.JPG|images/spain2.JPG,images/Spain3.JPG|images/spain3.JPG">
+      <span class="date">Mar 2023</span>
+      <img alt="Spain" src="images/Spain1.JPG" onerror="this.onerror=null;this.src='images/spain1.JPG'">
+      <div class="meta"><h3>Spain</h3><p>sunsets • stone streets • way too many photos</p></div>
+    </article>
+    
 
       <article
         class="trip reveal"
