--- a/travel.html
+++ b/travel.html
@@ -283,46 +283,44 @@
       data-images="images/Spain1.JPG|images/spain1.JPG,images/Spain2.JPG|images/spain2.JPG,images/Spain3.JPG|images/spain3.JPG">
       <span class="date">Mar 2023</span>
       <img alt="Spain" src="images/Spain1.JPG" onerror="this.onerror=null;this.src='images/spain1.JPG'">
-      <div class="meta"><h3>Spain</h3><p>sunsets • stone streets • way too many photos</p></div>
     </article>
     
 
-      <article
-        class="trip reveal"
-        data-title="New York — July 2024"
-        data-date="Jul 2024"
-        data-notes="Bagels, bridges, and catching our breath in the shade."
-        data-images="images/NewYork1.JPG,images/NewYork2.JPG,images/NewYork3.JPG,images/NewYork4.JPG,images/NewYork5.JPG">
-        <span class="date">Jul 2024</span>
-        <img alt="New York" src="images/NewYork1.JPG">
-        <div class="meta"><h3>New York</h3><p>bridges • bagels • late sunsets on the water</p></div>
-      </article>
+    <article
+    class="trip reveal"
+    data-title="New York — July 2024"
+    data-date="Jul 2024"
+    data-notes="I went to New York during my summer internship with Accenture for a client meeting and got the chance to actually present to the client in person which was such a big moment for me. It gave me so much confidence in speaking up and knowing I could handle myself in front of people at that level. Outside of work I was obsessed with the city. Everything moved so fast and I loved the energy of walking through the streets with so much happening around me. I tried bagels that honestly lived up to the hype, spent hours exploring different neighborhoods, and walked across the bridges just taking it all in. I met up with friends too which made the trip even more fun because we just roamed the city at night and laughed way too much. New York really taught me how to adapt quickly, balance the serious work side with just enjoying the moment, and it left me wanting to go back the second I left. 🌆🥯🗽"
+    data-images="images/NewYork1.JPG,images/NewYork2.JPG,images/NewYork3.JPG,images/NewYork4.JPG,images/NewYork5.JPG">
+    <span class="date">Jul 2024</span>
+    <img alt="New York" src="images/NewYork1.JPG">
+  </article>
+  
 
-      <article
-        class="trip reveal"
-        data-title="Catalina Island — Jan 2025"
-        data-date="Jan 2025"
-        data-notes="Cold air, warm sun. Quiet mornings and boats everywhere."
-        data-images="images/CatalinaIsland1.JPG|images/Catalinaisland1.JPG|images/Catalinalisland1.JPG,
-                     images/CatalinaIsland2.JPG|images/Catalinaisland2.JPG|images/Catalinalisland2.JPG,
-                     images/CatalinaIsland3.JPG|images/Catalinaisland3.JPG|images/Catalinalisland3.JPG">
-        <span class="date">Jan 2025</span>
-        <img alt="Catalina Island"
-             src="images/CatalinaIsland1.JPG"
-             onerror="this.onerror=null;this.src='images/Catalinaisland1.JPG';this.onerror=function(){this.src='images/Catalinalisland1.JPG'}">
-        <div class="meta"><h3>Catalina Island</h3><p>quiet coves • boats • crisp mornings</p></div>
-      </article>
+  <article
+  class="trip reveal"
+  data-title="Catalina Island — Jan 2025"
+  data-date="Jan 2025"
+  data-notes="I went to Catalina Island for my one year anniversary with my girlfriend and it honestly felt like we had taken a trip to Europe even though it was just an hour away from California. The whole island had this peaceful vibe that made it feel like a real getaway. We explored the place in golf carts which was such a fun way to see everything and it made the trip feel even more unique. Driving around the hills and along the coast gave us views that I still think about. The wild bison roaming around the island were unreal to see up close and made it feel like an adventure. What made it even better was just getting to share it all with her, from quiet mornings by the water to laughing the entire time as we cruised through town. Catalina gave me the perfect mix of relaxation, surprise, and memories I’ll never forget. 🏝️🦬💙"
+  data-images="images/CatalinaIsland1.JPG|images/Catalinaisland1.JPG|images/Catalinalisland1.JPG,
+               images/CatalinaIsland2.JPG|images/Catalinaisland2.JPG|images/Catalinalisland2.JPG,
+               images/CatalinaIsland3.JPG|images/Catalinaisland3.JPG|images/Catalinalisland3.JPG">
+  <span class="date">Jan 2025</span>
+  <img alt="Catalina Island"
+       src="images/CatalinaIsland1.JPG"
+       onerror="this.onerror=null;this.src='images/Catalinaisland1.JPG';this.onerror=function(){this.src='images/Catalinalisland1.JPG'}">
+</article>
 
-      <article
-        class="trip reveal"
-        data-title="Hawaii — March 2025"
-        data-date="Mar 2025"
-        data-notes="Palm shade, short hikes, and impossible blues. Slower days I still think about."
-        data-images="images/Hawaii1.JPG,images/Hawaii2.JPG,images/Hawaii3.JPG,images/Hawaii4.JPG|images/Hawaii.JPG">
-        <span class="date">Mar 2025</span>
-        <img alt="Hawaii" src="images/Hawaii1.JPG" onerror="this.onerror=null;this.src='images/Hawaii.JPG'">
-        <div class="meta"><h3>Hawaii</h3><p>tide pools • snacks • windows down</p></div>
-      </article>
+<article
+  class="trip reveal"
+  data-title="Hawaii — March 2025"
+  data-date="Mar 2025"
+  data-notes="I went to Hawaii for my junior year spring break with friends and it was honestly one of the best trips I’ve ever had. Every day felt like a new adventure and I still think about it all the time. We spent so much time on the road driving with views that didn’t even feel real and it made every ride unforgettable. The coconuts were a whole different level, drinking them fresh under the sun just hit different. We explored beaches, did short hikes, and ended each day with the kind of sunsets you can’t get anywhere else. What made it even better was being there with my friends because we laughed non stop and made memories I know we’ll talk about for years. Hawaii gave me a mix of pure fun, calm moments, and views I’ll always miss. 🌺🥥🌊"
+  data-images="images/Hawaii1.JPG,images/Hawaii2.JPG,images/Hawaii3.JPG,images/Hawaii4.JPG|images/Hawaii.JPG">
+  <span class="date">Mar 2025</span>
+  <img alt="Hawaii" src="images/Hawaii1.JPG" onerror="this.onerror=null;this.src='images/Hawaii.JPG'">
+</article>
+
     </section>
   </main>
 
