--- a/travel.html
+++ b/travel.html
@@ -283,6 +283,7 @@
       data-images="images/Spain1.JPG|images/spain1.JPG,images/Spain2.JPG|images/spain2.JPG,images/Spain3.JPG|images/spain3.JPG">
       <span class="date">Mar 2023</span>
       <img alt="Spain" src="images/Spain1.JPG" onerror="this.onerror=null;this.src='images/spain1.JPG'">
+      <div class="meta"><h3>Spain</h3></div>
     </article>
     
 
@@ -294,7 +295,9 @@
     data-images="images/NewYork1.JPG,images/NewYork2.JPG,images/NewYork3.JPG,images/NewYork4.JPG,images/NewYork5.JPG">
     <span class="date">Jul 2024</span>
     <img alt="New York" src="images/NewYork1.JPG">
+    <div class="meta"><h3>New York</h3></div>
   </article>
+  
   
 
   <article
@@ -309,7 +312,9 @@
   <img alt="Catalina Island"
        src="images/CatalinaIsland1.JPG"
        onerror="this.onerror=null;this.src='images/Catalinaisland1.JPG';this.onerror=function(){this.src='images/Catalinalisland1.JPG'}">
+  <div class="meta"><h3>Catalina Island</h3></div>
 </article>
+
 
 <article
   class="trip reveal"
@@ -319,6 +324,7 @@
   data-images="images/Hawaii1.JPG,images/Hawaii2.JPG,images/Hawaii3.JPG,images/Hawaii4.JPG|images/Hawaii.JPG">
   <span class="date">Mar 2025</span>
   <img alt="Hawaii" src="images/Hawaii1.JPG" onerror="this.onerror=null;this.src='images/Hawaii.JPG'">
+  <div class="meta"><h3>Hawaii</h3></div>
 </article>
 
     </section>
