--- a/work.html
+++ b/work.html
@@ -6,6 +6,10 @@
   <title>Work · Jan Arroyo</title>
   <link href="styles.css" rel="stylesheet" />
   <style>
+    html, body {
+  background: #f6f7f9; /* soft gray you’re using across the site */
+}
+
     :root{
       --sep: rgba(17,19,24,.16);
       --muted:#6b7280; --muted2:#7a7f87; --title:#1f2937;
