--- a/work.html
+++ b/work.html
@@ -302,6 +302,43 @@
       <div class="kicker">Projects &amp; Artifacts</div>
       <div class="panels">
 
+        <!-- 0) CRM Automation Project -->
+<article class="panel" id="crm-automation">
+  <div class="panel-grid">
+    <div class="media gallery"
+         data-title="CRM Automation — Email Outreach Tool"
+         data-images="images/CRM_DEMO.mp4"
+         tabindex="0" aria-label="Open CRM demo">
+      <div class="pill" data-role="indicator">Demo</div>
+      <div class="viewport">
+        <video controls style="width:100%;height:100%;border-radius:12px;">
+          <source src="images/CRM_DEMO.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+        </video>
+      </div>
+    </div>
+    <div class="text">
+      <h3>CRM Automation — Email Outreach Platform</h3>
+      <p>
+        During my time at BTG I built a CRM tool that connected Google Sheets and Gmail through Python. 
+        The system automatically pulled contact data, generated personalized emails, and sent them out at scale. 
+        It ended up reaching over 15,000 contacts, boosted response rates by 15%, and sped up outreach by more than 300% 
+        across three committees. What made it valuable was that it wasn’t just a one-off script — I designed it so the process 
+        could be reused for future campaigns. Working with the Google Sheets API, Gmail API, and handling JSON data gave me 
+        real experience building something technical that also had a direct business impact.
+      </p>
+      <div class="tags">
+        <span class="tag">Python</span>
+        <span class="tag">Google Sheets API</span>
+        <span class="tag">Gmail API</span>
+        <span class="tag">Automation</span>
+        <span class="tag">Scalability</span>
+      </div>
+    </div>
+  </div>
+</article>
+
+
         <!-- 1) Quokka -->
         <article class="panel" id="quokka">
           <div class="panel-grid">
