--- a/work.html
+++ b/work.html
@@ -312,7 +312,7 @@
       <div class="pill" data-role="indicator">Demo</div>
       <div class="viewport">
         <video controls style="width:100%;height:100%;border-radius:12px;">
-          <source src="images/CRM_DEMO.mp4" type="video/mp4">
+          <source src="images/CRM_DEMO_small.mp4" type="video/mp4">
           Your browser does not support the video tag.
         </video>
       </div>
