--- a/work.html
+++ b/work.html
@@ -305,18 +305,17 @@
         <!-- 0) CRM Automation Project -->
 <article class="panel" id="crm-automation">
   <div class="panel-grid">
-    <div class="media gallery"
-         data-title="CRM Automation — Email Outreach Tool"
-         data-images="images/CRM_DEMO.mp4"
-         tabindex="0" aria-label="Open CRM demo">
-      <div class="pill" data-role="indicator">Demo</div>
-      <div class="viewport">
-        <video controls style="width:100%;height:100%;border-radius:12px;">
-          <source src="images/CRM_DEMO_small.mp4" type="video/mp4">
-          Your browser does not support the video tag.
-        </video>
-      </div>
-    </div>
+    <div class="media"
+    data-title="CRM Automation — Email Outreach Tool"
+    tabindex="0" aria-label="Open CRM demo">
+ <div class="pill" data-role="indicator">Demo</div>
+ <div class="viewport">
+   <video controls style="width:100%;height:100%;border-radius:12px;">
+     <source src="images/CRM_DEMO_small.mp4" type="video/mp4">
+     Your browser does not support the video tag.
+   </video>
+ </div>
+</div>
     <div class="text">
       <h3>CRM Automation — Email Outreach Platform</h3>
       <p>
